--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -65,6 +65,9 @@ header {
             color: $white;
           }
         }
+        img {
+          cursor: pointer;
+        }
       }
     }
   }
