--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -39,6 +39,7 @@ header {
     min-height: 110px;
     .navbar-brand {
       color: $white;
+      font-weight: bold;
       font-family:'ChannelSlanted2';
       font-size: 20px;
       img {
