--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -14,6 +14,7 @@ header .navbar {
   min-height: 110px; }
   header .navbar .navbar-brand {
     color: #FFFFFF;
+    font-weight: bold;
     font-family: 'ChannelSlanted2';
     font-size: 20px; }
     header .navbar .navbar-brand img {
