--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-xs-4 col-sm-3">
         <div class="contact">
-          <div class="title"><span data-localize="header.contact"></span></div>
+          <div class="title"><span data-localize="header.contact">Contact Us</span></div>
           <p>
-            <span data-localize="company"></span>
+            <span data-localize="company">Wisteria Club</span>
             <br>
             221B Baker Street
             <br>
@@ -16,35 +16,35 @@
         </div>
       </div>
       <div class="col-xs-4 col-sm-3">
-        <div class="title"><span data-localize="header.services"></span></div>
+        <div class="title"><span data-localize="header.services">Services</span></div>
         <p>
-          <span data-localize="services.hand_painting"></span>
+          <span data-localize="services.hand_painting">Hand Painting</span>
           <br>
-          <span data-localize="services.celebration"></span>
+          <span data-localize="services.celebration">Celebration</span>
           <br>
-          <span data-localize="services.signing"></span>
+          <span data-localize="services.signing">Contract Signing</span>
           <br>
-          <span data-localize="services.performance"></span>
+          <span data-localize="services.performance">Performance</span>
           <br>
-          <span data-localize="services.charity"></span>
+          <span data-localize="services.charity">Charity</span>
           <br>
-          <span data-localize="services.communication"></span>
+          <span data-localize="services.communication">Communication</span>
           <br>
-          <span data-localize="services.planning"></span>
+          <span data-localize="services.planning">Activity Planning</span>
         </p>
       </div>
       <div class="col-xs-4 col-sm-3">
-        <div class="title" data-localize="footer.site_map"></div>
+        <div class="title" data-localize="footer.site_map">Site Map</div>
         <p>
-          <a href="/" data-localize="header.home" onclick="scrollToSection('#home'); return false;"></a>
+          <a href="/" data-localize="header.home" onclick="scrollToSection('#home'); return false;">Home</a>
           <br>
-          <a href="/about" data-localize="header.about" onclick="scrollToSection('#about'); return false;"></a>
+          <a href="/about" data-localize="header.about" onclick="scrollToSection('#about'); return false;">About Us</a>
           <br>
-          <a href="/services" data-localize="header.services" onclick="scrollToSection('#services'); return false;"></a>
+          <a href="/services" data-localize="header.services" onclick="scrollToSection('#services'); return false;">Services</a>
           <br>
-          <a href="/gallery" data-localize="header.gallery" onclick="scrollToSection('#gallery'); return false;"></a>
+          <a href="/gallery" data-localize="header.gallery" onclick="scrollToSection('#gallery'); return false;">Gallery</a>
           <br>
-          <a href="/contact" data-localize="header.contact" onclick="scrollToSection('#contact'); return false;"></a>
+          <a href="/contact" data-localize="header.contact" onclick="scrollToSection('#contact'); return false;">Contact Us</a>
         </p>
       </div>
       <div class="col-sm-3 col-xs-12 text-right">
@@ -57,7 +57,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <p data-localize="footer.bottom_line"></p>
+        <p data-localize="footer.bottom_line">Wisteria Club - A Boutique Events Company Based in London</p>
       </div>
       <div class="col-md-3">
         <ul class="nav icons justify-content-end">
