--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -1,8 +1,8 @@
 /* ===== Mixin ===== */
 /* ===== Universe ===== */
 html body {
-  background-image: url("../images/home3.png");
-  background-size: 110%; }
+  background-image: url("../images/webp/home.webp");
+  background-size: auto; }
   html body a:hover {
     text-decoration: none; }
 
@@ -12,11 +12,16 @@ header .navbar {
   border: 0;
   padding: 0px;
   min-height: 110px; }
+  header .navbar .navbar-toggler {
+    color: #FFFFFF; }
   header .navbar .navbar-brand {
     color: #FFFFFF;
     font-weight: bold;
     font-family: 'ChannelSlanted2';
     font-size: 26px; }
+    @media (max-width: 576px) {
+      header .navbar .navbar-brand {
+        font-size: 20px; } }
     header .navbar .navbar-brand img {
       width: 160px; }
   header .navbar .navbar-nav li {
@@ -57,26 +62,40 @@ footer {
       color: #FFFFFF; }
   footer .upper {
     background: #292024;
-    padding: 80px 0; }
-    footer .upper .title {
-      font-size: 20px;
-      font-weight: bold;
-      margin-bottom: 15px; }
-    footer .upper .navbar-brand {
-      color: #FFFFFF;
-      font-family: 'ChannelSlanted2';
-      font-size: 20px;
-      margin-top: 10px; }
-      footer .upper .navbar-brand img {
-        width: 180px; }
+    padding: 50px 0 50px 0; }
+    footer .upper .wrapper {
+      margin: 30px 0; }
+      @media (max-width: 576px) {
+        footer .upper .wrapper {
+          text-align: center; } }
+      footer .upper .wrapper .title {
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 15px; }
+      footer .upper .wrapper .navbar-brand {
+        color: #FFFFFF;
+        font-family: 'ChannelSlanted2';
+        font-size: 20px;
+        margin-top: 10px; }
+        footer .upper .wrapper .navbar-brand img {
+          width: 180px; }
   footer .lower {
     background: #423A36;
     padding: 5px 0; }
+    @media (max-width: 576px) {
+      footer .lower p {
+        text-align: center; } }
     footer .lower .icons {
       margin-top: 2px;
-      margin-bottom: 0; }
+      margin-bottom: 0;
+      text-align: right; }
+      @media (max-width: 576px) {
+        footer .lower .icons {
+          text-align: center;
+          margin-top: 20px; } }
       footer .lower .icons .icon {
-        margin-left: 10px; }
+        margin: 0 5px;
+        display: inline-block; }
         footer .lower .icons .icon i {
           font-size: 25px; }
 
@@ -86,10 +105,13 @@ footer {
   width: 75px;
   margin-bottom: 50px; }
 .page-home #home {
-  min-height: 650px;
+  min-height: 640px;
   color: #FFFFFF; }
   .page-home #home .highlight {
     padding-top: 120px; }
+    @media (max-width: 576px) {
+      .page-home #home .highlight {
+        padding-top: 75px; } }
     .page-home #home .highlight .title {
       font-size: 24px;
       font-weight: bold;
@@ -99,7 +121,7 @@ footer {
       font-size: 18px;
       line-height: 30px; }
     .page-home #home .highlight .btn-about-us {
-      margin-top: 40px;
+      margin: 40px 0 20px 0;
       padding: 18px 30px;
       border: 2px solid #FFFFFF;
       font-size: 14px;
@@ -117,8 +139,11 @@ footer {
         -webkit-transition: 0.5s;
         -o-transition: 0.5s; }
   .page-home #home .logo {
-    margin-top: 40px;
+    margin: 40px 0 80px 0;
     width: 600px; }
+    @media (max-width: 576px) {
+      .page-home #home .logo {
+        width: 350px; } }
 .page-home #about {
   padding: 120px 0;
   background: #FFFFFF; }
@@ -129,7 +154,7 @@ footer {
     line-height: 30px;
     font-size: 16px; }
 .page-home #services {
-  padding: 140px 0;
+  padding: 90px 0;
   background: #423A36; }
   .page-home #services .title {
     font-weight: bold;
@@ -141,26 +166,25 @@ footer {
     color: #FFFFFF;
     margin-top: 50px; }
     .page-home #services .items .item {
-      font-size: 48px;
-      width: 130px;
-      padding: 27px 0;
-      border: 2px solid #FFFFFF;
-      border-radius: 65px;
-      transition: 0.5s;
-      -moz-transition: 0.5s;
-      -webkit-transition: 0.5s;
-      -o-transition: 0.5s; }
-      .page-home #services .items .item:hover {
-        background: #FFFFFF;
-        color: #423A36;
+      text-align: center;
+      padding: 0 0 50px 0; }
+      .page-home #services .items .item .icon {
+        display: inline-block;
+        border: 2px solid #FFFFFF;
+        padding: 27px 0;
+        width: 130px;
+        font-size: 48px;
+        border-radius: 65px;
         transition: 0.5s;
         -moz-transition: 0.5s;
         -webkit-transition: 0.5s;
-        -o-transition: 0.5s;
-        cursor: pointer; }
-    .page-home #services .items .item-name {
-      margin-top: 20px;
-      font-size: 16px; }
+        -o-transition: 0.5s; }
+        .page-home #services .items .item .icon:hover {
+          background: #FFFFFF;
+          color: #423A36; }
+      .page-home #services .items .item .name {
+        margin-top: 20px;
+        font-size: 16px; }
 .page-home #gallery {
   padding: 140px 0;
   background: #FFFFFF; }
@@ -175,6 +199,18 @@ footer {
     color: #423A36; }
   .page-home #gallery .pics {
     margin-top: 60px; }
+    .page-home #gallery .pics .hide {
+      display: none; }
+    .page-home #gallery .pics .pic {
+      width: 100%;
+      height: 0;
+      padding-bottom: 56%;
+      overflow: hidden;
+      margin-bottom: 30px; }
+      .page-home #gallery .pics .pic .up {
+        margin-top: -80px; }
+      .page-home #gallery .pics .pic img {
+        cursor: pointer; }
   .page-home #gallery .btn-more {
     margin-top: 60px;
     padding: 15px 20px;
