--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-4 col-sm-3">
-        <div class="contact">
+        <div class="wrapper">
           <div class="title"><span data-localize="header.contact">Contact Us</span></div>
           <p>
             <span data-localize="company">Wisteria Club</span>
@@ -16,39 +16,45 @@
         </div>
       </div>
       <div class="col-xs-4 col-sm-3">
-        <div class="title"><span data-localize="header.services">Services</span></div>
-        <p>
-          <span data-localize="services.hand_painting">Hand Painting</span>
-          <br>
-          <span data-localize="services.celebration">Celebration</span>
-          <br>
-          <span data-localize="services.signing">Contract Signing</span>
-          <br>
-          <span data-localize="services.performance">Performance</span>
-          <br>
-          <span data-localize="services.charity">Charity</span>
-          <br>
-          <span data-localize="services.communication">Communication</span>
-          <br>
-          <span data-localize="services.planning">Activity Planning</span>
-        </p>
+        <div class="wrapper">
+          <div class="title"><span data-localize="header.services">Services</span></div>
+          <p>
+            <span data-localize="services.hand_painting">Hand Painting</span>
+            <br>
+            <span data-localize="services.celebration">Celebration</span>
+            <br>
+            <span data-localize="services.signing">Contract Signing</span>
+            <br>
+            <span data-localize="services.performance">Performance</span>
+            <br>
+            <span data-localize="services.charity">Charity</span>
+            <br>
+            <span data-localize="services.communication">Communication</span>
+            <br>
+            <span data-localize="services.planning">Activity Planning</span>
+          </p>
+        </div>
       </div>
       <div class="col-xs-4 col-sm-3">
-        <div class="title" data-localize="footer.site_map">Site Map</div>
-        <p>
-          <a href="/" data-localize="header.home" onclick="scrollToSection('#home'); return false;">Home</a>
-          <br>
-          <a href="/about" data-localize="header.about" onclick="scrollToSection('#about'); return false;">About Us</a>
-          <br>
-          <a href="/services" data-localize="header.services" onclick="scrollToSection('#services'); return false;">Services</a>
-          <br>
-          <a href="/gallery" data-localize="header.gallery" onclick="scrollToSection('#gallery'); return false;">Gallery</a>
-          <br>
-          <a href="/contact" data-localize="header.contact" onclick="scrollToSection('#contact'); return false;">Contact Us</a>
-        </p>
+        <div class="wrapper">
+          <div class="title" data-localize="footer.site_map">Site Map</div>
+          <p>
+            <a href="/" data-localize="header.home" onclick="scrollToSection('#home'); return false;">Home</a>
+            <br>
+            <a href="/about" data-localize="header.about" onclick="scrollToSection('#about'); return false;">About Us</a>
+            <br>
+            <a href="/services" data-localize="header.services" onclick="scrollToSection('#services'); return false;">Services</a>
+            <br>
+            <a href="/gallery" data-localize="header.gallery" onclick="scrollToSection('#gallery'); return false;">Gallery</a>
+            <br>
+            <a href="/contact" data-localize="header.contact" onclick="scrollToSection('#contact'); return false;">Contact Us</a>
+          </p>
+        </div>
       </div>
       <div class="col-sm-3 col-xs-12 text-right">
-        <a href="/" id="footer-company" data-localize="footer.company" class="navbar-brand"></a>
+        <div class="wrapper">
+          <a href="/" id="footer-company" data-localize="footer.company" class="navbar-brand"></a>
+        </div>
       </div>
     </div>
   </div>
@@ -59,13 +65,13 @@
       <div class="col-md-9">
         <p data-localize="footer.bottom_line">Wisteria Club - A Boutique Events Company Based in London</p>
       </div>
-      <div class="col-md-3">
-        <ul class="nav icons justify-content-end">
-          <li class="nav-item icon"><i class="fab fa-facebook-square"></i></li>
-          <li class="nav-item icon"><i class="fab fa-twitter-square"></i></li>
-          <li class="nav-item icon"><i class="fab fa-weibo"></i></li>
-          <li class="nav-item icon"><i class="fab fa-weixin"></i></li>
-        </ul>
+      <div class="col-md-3 ">
+        <div class="icons">
+          <div class="icon"><i class="fab fa-facebook-square"></i></div>
+          <div class="icon"><i class="fab fa-twitter-square"></i></div>
+          <div class="icon"><i class="fab fa-weibo"></i></div>
+          <div class="icon"><i class="fab fa-weixin"></i></div>
+        </div>
       </div>
     </div>
   </div>
@@ -74,7 +80,7 @@
 <script>
   $(function () {
       if (getCookie(name) == "cn") {
-          $("#footer-company").html("<img src='assets/images/name_white.png'>")
+          $("#footer-company").html("<img src='assets/images/webp/name_white.webp'>")
       } else if (getCookie(name) == "en") {
           $("#footer-company").html("Wisteria Club")
       }
