--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -80,7 +80,7 @@
 <script>
   $(function () {
       if (getCookie(name) == "cn") {
-          $("#footer-company").html("<img src='assets/images/webp/name_white.webp'>")
+          $("#footer-company").html("<img src='assets/images/name_white.png'>")
       } else if (getCookie(name) == "en") {
           $("#footer-company").html("Wisteria Club")
       }
