--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -18,7 +18,7 @@ $purple: #5c1659;
 
 html {
   body {
-    background-image: url("../images/webp/home.webp");
+    background-image: url("../images/home.png");
     background-size: auto;
     a {
       &:hover {
