--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -231,7 +231,7 @@ footer {
       -webkit-transition: 0.5s;
       -o-transition: 0.5s; }
 .page-home #team {
-  padding: 120px 0;
+  padding: 120px 0 80px 0;
   background: #423A36;
   color: #FFFFFF; }
   .page-home #team .title {
@@ -240,37 +240,39 @@ footer {
     color: #FFFFFF; }
   .page-home #team hr {
     border-bottom: 4px solid #FFFFFF; }
-  .page-home #team .member .avatar {
-    margin-bottom: 20px;
-    position: relative; }
-    .page-home #team .member .avatar img {
-      position: relative;
-      width: 150px;
-      border-radius: 75px;
-      z-index: 0; }
-    .page-home #team .member .avatar .layer {
-      z-index: 1;
-      border-radius: 75px;
-      display: inline-block;
-      position: absolute;
-      width: 150px;
-      padding: 75px;
-      background: transparent;
-      cursor: pointer;
-      transition: 0.5s;
-      -moz-transition: 0.5s;
-      -webkit-transition: 0.5s;
-      -o-transition: 0.5s; }
-      .page-home #team .member .avatar .layer:hover {
+  .page-home #team .member {
+    margin-bottom: 50px; }
+    .page-home #team .member .avatar {
+      margin-bottom: 20px;
+      position: relative; }
+      .page-home #team .member .avatar img {
+        position: relative;
+        width: 150px;
+        border-radius: 75px;
+        z-index: 0; }
+      .page-home #team .member .avatar .layer {
+        z-index: 1;
+        border-radius: 75px;
+        display: inline-block;
+        position: absolute;
+        width: 150px;
+        padding: 75px;
+        background: transparent;
+        cursor: pointer;
         transition: 0.5s;
         -moz-transition: 0.5s;
         -webkit-transition: 0.5s;
-        -o-transition: 0.5s;
-        background: #423A36;
-        opacity: 0.6; }
-  .page-home #team .member .name {
-    font-weight: bold;
-    font-size: 18px;
-    margin-bottom: 10px; }
+        -o-transition: 0.5s; }
+        .page-home #team .member .avatar .layer:hover {
+          transition: 0.5s;
+          -moz-transition: 0.5s;
+          -webkit-transition: 0.5s;
+          -o-transition: 0.5s;
+          background: #423A36;
+          opacity: 0.6; }
+    .page-home #team .member .name {
+      font-weight: bold;
+      font-size: 18px;
+      margin-bottom: 10px; }
 
 /*# sourceMappingURL=custom.css.map */
