--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -22,8 +22,10 @@ header .navbar {
     @media (max-width: 576px) {
       header .navbar .navbar-brand {
         font-size: 20px; } }
-    header .navbar .navbar-brand img {
+    header .navbar .navbar-brand .logo-cn {
       width: 160px; }
+    header .navbar .navbar-brand .logo-en {
+      width: 240px; }
   header .navbar .navbar-nav li {
     color: #FFFFFF;
     margin: 30px 0 30px 40px; }
