--- a/assets/stylesheets/custom.css
+++ b/assets/stylesheets/custom.css
@@ -14,18 +14,10 @@ header .navbar {
   min-height: 110px; }
   header .navbar .navbar-toggler {
     color: #FFFFFF; }
-  header .navbar .navbar-brand {
-    color: #FFFFFF;
-    font-weight: bold;
-    font-family: 'ChannelSlanted2';
-    font-size: 26px; }
-    @media (max-width: 576px) {
-      header .navbar .navbar-brand {
-        font-size: 20px; } }
-    header .navbar .navbar-brand .logo-cn {
-      width: 160px; }
-    header .navbar .navbar-brand .logo-en {
-      width: 240px; }
+  header .navbar .navbar-brand .logo-cn {
+    width: 160px; }
+  header .navbar .navbar-brand .logo-en {
+    width: 240px; }
   header .navbar .navbar-nav li {
     color: #FFFFFF;
     margin: 30px 0 30px 40px; }
@@ -74,13 +66,10 @@ footer {
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 15px; }
-      footer .upper .wrapper .navbar-brand {
-        color: #FFFFFF;
-        font-family: 'ChannelSlanted2';
-        font-size: 20px;
-        margin-top: 10px; }
-        footer .upper .wrapper .navbar-brand img {
-          width: 180px; }
+      footer .upper .wrapper .navbar-brand .logo-cn {
+        width: 160px; }
+      footer .upper .wrapper .navbar-brand .logo-en {
+        width: 240px; }
   footer .lower {
     background: #423A36;
     padding: 5px 0; }
