--- a/assets/stylesheets/custom.scss
+++ b/assets/stylesheets/custom.scss
@@ -49,10 +49,10 @@ header {
       }
     }
     .navbar-nav {
-      li {
+      .nav-item {
         color: $white;
         margin: 30px 0 30px 40px;
-        a {
+        .nav-item-link {
           padding: 4px 0 4px 0;
           border-bottom: 3px solid transparent;
           color: $white;
@@ -70,6 +70,17 @@ header {
         }
         img {
           cursor: pointer;
+        }
+        .dropdown-menu {
+          .dropdown-item {
+            a {
+              color: $black;
+              font-weight: normal;
+              &:hover {
+                color: rebeccapurple;
+              }
+            }
+          }
         }
       }
     }
@@ -163,12 +174,13 @@ footer {
       .title {
         font-size: 24px;
         font-weight: bold;
-        padding: 0 20px;
+        padding: 5px 20px;
       }
       .content {
         margin-top: 30px;
         font-size: 18px;
         line-height: 30px;
+        padding: 5px 20px;
       }
       .btn-about-us {
         margin: 40px 0 20px 0;
@@ -182,6 +194,14 @@ footer {
           background: $white;
           color: $purple;
           @include transition;
+        }
+      }
+    }
+    .services-items {
+      a {
+        color: $white;
+        &:hover {
+          color: pink;
         }
       }
     }
